Fixes template object tree collapsing with a little it more frb

--- a/ui/template-explorer.reel/template-explorer.css
+++ b/ui/template-explorer.reel/template-explorer.css
@@ -148,6 +148,10 @@
     opacity: 0.5;
 }
 
+.TemplateObjectCell--notCollapsible {
+    margin-left: 20px;
+}
+
 .TemplateObjectCell.selected {
     border-color: hsl(210,100%,60%);
     background-color: hsl(0,0%,98%)
